--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -51,8 +50,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
-    "@react-native-community/cli": "latest",
-    "typescript": "^5.3.3"
-  },
+    "typescript": "^5.3.3",
+    "@react-native-community/cli": "latest" },
   "private": true
 }
